STYLE/FIX - Update some HTTP response bodies   - Change the name of the `InputValidationResponse` to `PlayerInvalidFieldsResponse`     - Change its fields to include the suffix `_problems` for more clarity   - Change the `ExistingFieldViolationResponse` struct:     - Rename it to `PlayerUniquenessViolationResponse` for clarity     - Instead of having two fields (one for each "username" and "email"), it has one - a Vector of Strings, which may include "username", "email", or both.       - This makes it more appropriate to return for requests that are not player registration, but for example if a player just tries to change their email address
